--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>GestionBar</name>
     <description>GestionBar</description>
     <properties>
-        <java.version>11</java.version>
+        <java.runtime.version>11</java.runtime.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
