--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
             <version>1.14.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>3.3.2</version>
+            <type>maven-plugin</type>
+        </dependency>
 
     </dependencies>
 
