--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=81
 spring.thymeleaf.cache=false
-spring.datasource.url=jdbc:mysql://sql11.freemysqlhosting.net:3306/sql11475961
-spring.datasource.username=sql11475961
-spring.datasource.password=wXKKgLCX1A
+spring.datasource.url=jdbc:mysql://sql7.freemysqlhosting.net/sql7635700
+spring.datasource.username=sql7635700
+spring.datasource.password=PaQLW9ejwp
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
